# chemistry_tools

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .yapfignore  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  __pkginfo__.py  formate.toml  git_helper.yml  lint_roller.sh  make_conda_recipe.py  make_rst_skeleton.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.ci/: actions_deploy_conda.sh  copy_pypi_2_github.py  travis_build_conda.sh  travis_deploy_conda.sh
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  conda_ci.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
chemistry_tools/: Assay.py  Compound.py  Errors.py  PropertyFormat.py  SpectrumSimilarity.py  Substance.py  Utils.py  __init__.py  cache.py  cas.py  constants.py  dicts.py  lookup.py  names.py  property_format.py  rate_limiter.py  spectrum_similarity.py  toxnet.py  units.py  utils.py
chemistry_tools/elements/: __init__.py  _classes.py  _elements.py  _isotope_data.py  _table.py  actinides.py  alkali_metals.py  alkaline_earth_metals.py  chalcogens.py  classes.py  halogens.py  lanthanides.py  noble_gases.py  pnictogens.py  requirements.txt  tetrels.py  transition_metals.py  triels.py
chemistry_tools/formulae/: __init__.py  _parser_core.py  composition.py  compound.py  dataarray.py  formula.py  html.py  iso_dist.py  latex.py  parser.py  requirements.txt  species.py  unicode.py  utils.py
chemistry_tools/property_lookup/: Assay.py  Atom.py  Bond.py  Compound.py  PropertyFormat.py  Substance.py  __init__.py  constants.py  deprecation.py  errors.py  property_format.py  toxnet.py  utils.py
chemistry_tools/pubchem/: __init__.py  atom.py  bond.py  compound.py  description.py  enums.py  enums.pyi  errors.py  full_record.py  images.py  lookup.py  properties.py  pug_rest.py  requirements.txt  synonyms.py  utils.py
doc-source/: Building.rst  Source.rst  _internal_extension.py  conf.py  contributing.rst  docs.rst  index.rst  license.rst  requirements.txt
doc-source/api/: cache.rst  cas.rst  chemistry_tools.rst  constants.rst  dicts.rst  elements.rst  formulae.rst  names.rst  property_format.rst  pubchem.rst  rate_limiter.rst  spectrum_similarity.rst  toxnet.rst  units.rst  utils.rst
doc-source/api/elements/: actinides.rst  alkali_metals.rst  alkaline_earth_metals.rst  chalcogens.rst  classes.rst  halogens.rst  index.rst  lanthanides.rst  noble_gases.rst  pnictogens.rst  (+3 more)
from_elsewhere/from_bunshi/: cleanIUPAC.py
from_elsewhere/from_chempy/: printing.py  reactions.py  reactionsystem.py  test_printing.py  test_reactions.py  test_reactionsystem.py
from_elsewhere/from_molmass/: precision_digits.py
from_elsewhere/from_pytoeomics/: utils.py
physical_properties/: physical_properties.py  test_physical_properties.py
tests/: __init__.py  conftest.py  requirements.txt  test_Assay.py  test_Atom.py  test_Bond.py  test_Compound.py  test_Errors.py  test_SpectrumSimilarity.py  test_assay.py  test_compound.py  test_compound3d.py  test_dicts.py  test_download.py  test_elements.py  test_errors.py  test_identifiers.py  test_pandas.py  test_properties.py  test_property_format.py  test_requests.py  test_search.py  test_sources.py  test_substance.py  test_units.py  test_utils.py
tests/cassettes/: test_comma_string_properties.json  test_compound_equality.json  test_compound_series.json  test_compound_to_frame.json  test_content_type.json  test_csv_download.json  test_invalid_identifier.json  test_notfound_identifier.json  test_properties.json  test_properties_dataframe.json  test_requests.json  test_single_atom.json  test_synonyms.json  test_underscore_properties.json
tests/test_formulae/: test_compound.py  test_formula.py  test_parser.py
tests/test_pubchem/: test_Assay.py  test_Atom.py  test_Bond.py  test_Compound.py  test_Errors.py  test_compound3d.py  test_download.py  test_pandas.py  test_properties.py  test_requests.py  test_search.py  test_sources.py
(+27 files in other folders)
