[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "chemistry_tools"
version = "0.4.1"
description = "Python tools for analysis of chemical compounds."
readme = "README.rst"
keywords = [ "chemistry", "utility",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/chemistry_tools"
"Issue Tracker" = "https://github.com/domdfcoding/chemistry_tools/issues"
"Source Code" = "https://github.com/domdfcoding/chemistry_tools"
Documentation = "https://chemistry_tools.readthedocs.io/en/latest"

[project.optional-dependencies]
pubchem = [ "cawdrey>=0.1.7", "mathematical>=0.1.13", "pillow>=7.0.0", "pyparsing>=2.2.0", "tabulate>=0.8.9",]
formulae = [ "cawdrey>=0.1.7", "mathematical>=0.1.13", "pyparsing>=2.2.0", "tabulate>=0.8.9",]
plotting = [
    'matplotlib>=3.0.0; platform_machine != "aarch64" or python_version > "3.6"',
    'matplotlib<=3.2.2; platform_machine == "aarch64" and python_version == "3.6"',
]
toxnet = [ "beautifulsoup4>=4.7.0",]
all = [
    "beautifulsoup4>=4.7.0",
    "cawdrey>=0.1.7",
    "mathematical>=0.1.13",
    'matplotlib>=3.0.0; platform_machine != "aarch64" or python_version > "3.6"',
    'matplotlib<=3.2.2; platform_machine == "aarch64" and python_version == "3.6"',
    "pillow>=7.0.0",
    "pyparsing>=2.2.0",
    "tabulate>=0.8.9",
]

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"
license-key = "LGPL-3.0-or-later"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"
additional-files = [
    "recursive-include chemistry_tools requirements.txt",
    "recursive-exclude tests *",
    "prune tests*",
]
